Fixed app list on IE7

--- a/src/components/c-app-list/style.ie.styl
+++ b/src/components/c-app-list/style.ie.styl
@@ -4,7 +4,12 @@
 .c-app-list {
   ieoldcf();
   li {
-    float:left;
-    width: 45%;
+    padding:0;
+    margin-right: 0 !important;
+    float: left;
+    width: 50%;
+    .u-icon {
+      float:left;
+    }
   }
 }
